--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <TABLE WIDTH="580" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="514" HEIGHT="309">
-                <center><img src="landing_page.png" usemap="#land" width="540" height="410"> </center>
+                <center><img src="images/landing_page.png" usemap="#land" width="540" height="410"> </center>
                 <map name="land">
                     <area shape=rect coords="340,100,480,140" href="cardio.html">
                     <area shape=rect coords="200,45,315,100" href="ans.html">
