--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <P ALIGN=CENTER><B><FONT SIZE=+2>About Physiology Maps</FONT></B></P>
 <h3>Rationale for Development</h3>
 <P>Physiology Maps is a tool to explore concepts in physiology. It was created to serve as a resource for connecting physiology concepts taught and applied throughout the pre-clinical curricula of medical school, though it may also be helpful to students in their clinical years or in other health professional schools. It is not intended to be a complete or exhaustive physiology text. It is meant to provide a framework for how different physiologic processes and systems connect to each other and a foundation on which to build a deeper understanding of pathologic processes and diseases. </P>
+<p>Contact: physiologymaps@gmail.com</p>
 
         </body>
         </html>
