--- a/preload_afterload.html
+++ b/preload_afterload.html
@@ -55,11 +55,12 @@
                 <TD WIDTH="800" HEIGHT="309">
                 <h2 align=center>Increases and Decreases in Afterload</h2>
                 <p> <b>Afterload is increased</b> whenever arterial pressure is increased. For example: </p>
-                <ul><li><b>Hypertension</b>: Hypertension, or increased blood pressure, represents a state of increased mean arterial pressure (MAP). In a person with hypertension, afterload is increased because the pressure of the arterial system is higher than normal. Their heart must work harder to pump blood against this higher pressure system in order to maintain cardiac output. </li>
-                    <li>Aortic stenosis: Aortic stenosis is . </li></ul>
+                <ul><li><b>Hypertension</b>: Hypertension, or increased blood pressure, represents a state of increased mean arterial pressure (MAP). In a person with hypertension, afterload is increased because the pressure of the arterial system is higher than normal. Their heart must work harder to pump blood against this higher pressure system in order to maintain cardiac output. Over time, this leads to LV hypertrophy as the heart compensates for this increased afterload. </li>
+                    <li><b>Aortic stenosis</b>: Aortic stenosis is when the <a href="heart_blood_flow.html#valves">aortic valve</a> narrows and calcifies, which restricts blood flow through the valve. Since the aortic valve is the outflow tract for the LV (the LV must eject its blood through the aortic valve in each round of systole), aortic stenosis creates higher pressures against which the LV must contract. It's functionally similar to hypertension, except the increase in pressure is localized to the aortic valve itself. So, in someone with aortic stenosis, afterload is increased and the LV must work harder and generate greater contractile force in order to maintain cardiac output.</li></ul>
                 <p> <b>Afterload is decreased</b> whenever arterial pressure is decreased. For example: </p>
-                <ul><li>Septic or anaphylactic shock: xxx. </li>
-                    <li> Anti-hypertensive drugs: xxx. </li></ul>
+                <ul><li><b>Distributive shock</b>: Distributive shock is characterized by widespread vasodilation. This leads to a systemic decrease in vascular resistance, which decreases afterload. The causes of this vasodilation vary depending on the cause of shock. 
+                In septic and anaphylactic shock, the inflammatory response to infection or antigen exposure causes widespread vasodilation. In neurogenic shock, sympathetic nervous system dysfunction results in loss of vasular tone, due to disruption in </li>
+                    <li><b>Anti-hypertensive drugs</b>: Anti-hypertensive drugs function to lower blood pressure through a variety of mechanisms. Someone taking anti-hypertensives will have a decreased afterload compared to their normally hypertensive state. </li></ul>
 
                 
 
