--- a/cardiac_cycle.html
+++ b/cardiac_cycle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
         <html>
         <head>
-            <title> Flow of Blood Through the Heart </title>
+            <title> The Cardiac Cycle </title>
         </head>
         <body bgcolor="#D9E3F0">
 
@@ -9,7 +9,7 @@
             <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
-                <a name="blood_flow"><h2 align=center>Cardiac Cycle</h2></a>
+                <h2 align=center>The Cardiac Cycle</h2>
                 <center><img src = "images/cardio/cardiac_cycle.png" usemap="#carcycle" width="540" height="380">
                 <map name="carcycle">
                     <area shape=rect coords="15,95,70,125" href="ekg.html">
