--- a/ans.html
+++ b/ans.html
@@ -19,7 +19,7 @@
                     <area shape=rect coords="365,215,455,250" href="#adrenergic">
                     <area shape=rect coords="15,290,105,325" href="#ans_ganglia">
                     <area shape=rect coords="350,400,445,460" href="ans_reg_heart.html">
-                    <area shape=rect coords="350,345,445,380" href="heart_cells.html">
+                    <area shape=rect coords="350,345,445,380" href="cardiac_myocytes.html">
             	</map><br><br>
             	<a href="neurons.html">Click here for an overview of neurons, neuronal action potentials, and synapses</a><br><br>
                 <a href="#ans_summary">Click here to jump down to the ANS summary chart</a><br>
