--- a/ans_reg_heart.html
+++ b/ans_reg_heart.html
@@ -16,9 +16,9 @@
             		<area shape=rect coords="345,60,455,100" href="#dromotropic">
                     <area shape=rect coords="70,145,130,180" href="cardiac_output.html#heart_rate">
                     <area shape=rect coords="220,150,315,175" href="cardiac_output.html#contractility">
-                    <area shape=rect coords="20,200,100,240" href="heart_cells.html#sa_node">
-                    <area shape=rect coords="140,190,230,245" href="heart_cells.html#av_myocytes">
-                    <area shape=rect coords="400,205,480,240" href="heart_cells.html#av_node">
+                    <area shape=rect coords="20,200,100,240" href="cardiac_myocytes.html#sa_node">
+                    <area shape=rect coords="140,190,230,245" href="cardiac_myocytes.html#av_myocytes">
+                    <area shape=rect coords="400,205,480,240" href="cardiac_myocytes.html#av_node">
                     <area shape=rect coords="320,245,390,280" href="cardiac_output.html#ef">
                     <area shape=rect coords="235,275,305,310" href="cardiac_output.html#stroke_vol">
                     <area shape=rect coords="145,320,220,360" href="cardiac_output.html">
