--- a/cardiac_cycle.html
+++ b/cardiac_cycle.html
@@ -13,9 +13,9 @@
                 <center><img src = "images/cardio/cardiac_cycle.png" usemap="#carcycle" width="540" height="380">
                 <map name="carcycle">
                     <area shape=rect coords="15,95,70,125" href="ekg.html">
-                    <area shape=rect coords="115,60,195,100" href="heart_cells.html#electrical_signal">
-                    <area shape=rect coords="100,130,185,170" href="heart_cells.html">
-                    <area shape=rect coords="95,195,190,250" href="heart_cells.html#myocytes_contract">
+                    <area shape=rect coords="115,60,195,100" href="cardiac_myocytes.html#electrical_signal">
+                    <area shape=rect coords="100,130,185,170" href="cardiac_myocytes.html">
+                    <area shape=rect coords="95,195,190,250" href="cardiac_myocytes.html#myocytes_contract">
                     <area shape=rect coords="240,110,325,145" href="#chambers">
                     <area shape=rect coords="240,175,325,205" href="#valves">
                     <area shape=rect coords="240,240,325,280" href="#sounds">
@@ -27,7 +27,7 @@
                     <area shape=rect coords="450,125,510,165" href="cardiac_output.html#stroke_vol">
                 </map></center>
 
-                <p> The <b>cardiac cycle</b> refers to the series of events that happen in the heart during one heartbeat. The cardiac cycle <b>functions to maintain blood flow</b> through the heart and the body. Each cardiac cycle is initiated by <a href="heart_cells.html#electrical_signal">electrical signal</a> that originates in the <a href="heart_cells.html#nodal_cells">SA node</a> and travels in a wave of depolarization through the heart. The average <a href="cardiac_output.html#heart_rate">heart rate</a> is 60-90 beats per minute, which means the cardiac cycle repeats 60-90 times per minute.</p>
+                <p> The <b>cardiac cycle</b> refers to the series of events that happen in the heart during one heartbeat. The cardiac cycle <b>functions to maintain blood flow</b> through the heart and the body. Each cardiac cycle is initiated by <a href="cardiac_myocytes.html#electrical_signal">electrical signal</a> that originates in the <a href="cardiac_myocytes.html#nodal_cells">SA node</a> and travels in a wave of depolarization through the heart. The average <a href="cardiac_output.html#heart_rate">heart rate</a> is 60-90 beats per minute, which means the cardiac cycle repeats 60-90 times per minute.</p>
                 <p> <b>The cardiac cycle has two main phases</b>:
                     <ul><li><b>Diastole</b>: When the heart muscle relaxes and fills with blood, and </li>
                         <li><b>Systole</b>: When the heart muscle contracts and pumps blood forward. </li></ul></p>
