--- a/cardiac_output.html
+++ b/cardiac_output.html
@@ -52,7 +52,7 @@
             <h3 align=center>Heart Rate and Contractility</h3>
             	<p> <b>Increases in HR produce increases in <a href="#contractility">contractility</b></a>. xxx. </p>
 			<h3 align=center>Regulation of Heart Rate</h3>
-                <p>The heart rate is normally set at the <b>depolarization rate of the <a href="heart_cells.html#sa_node">SA node</a></b>, which is considered the "pacemaker" of the heart. The SA nodal cells--and therefore heart rate--are regulated by the <a href="ans.html">autonomic nervous system</a>. The autonomic nervous system effects on heart rate are "<a href="ans_reg_heart.html#chronotropic"><b>chronotropic effects</b></a>".</p></TD></TR></TABLE>
+                <p>The heart rate is normally set at the <b>depolarization rate of the <a href="cardiac_myocytes.html#sa_node">SA node</a></b>, which is considered the "pacemaker" of the heart. The SA nodal cells--and therefore heart rate--are regulated by the <a href="ans.html">autonomic nervous system</a>. The autonomic nervous system effects on heart rate are "<a href="ans_reg_heart.html#chronotropic"><b>chronotropic effects</b></a>".</p></TD></TR></TABLE>
 
         <br>
 
@@ -60,12 +60,12 @@
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
                 <a name="contractility"><h2 align=center>Contractility</h2></a>
-                <p> <b>Contractility</b> is a property of <a href="heart_cells.html#av_myocytes">atrial and ventricular myocytes</a> and refers to the ability of these myocytes to <b>generate force during muscle contraction</b> to push out blood. Contractility is one of the main determinants of <a href="#stroke_vol">stroke volume (SV)</a>: <b>As contractility increases, SV increases</b>. If myocytes become more contractile, they are able to generate more force--and therefore pump harder and eject more blood--with each heartbeat.</p>
+                <p> <b>Contractility</b> is a property of <a href="cardiac_myocytes.html#av_myocytes">atrial and ventricular myocytes</a> and refers to the ability of these myocytes to <b>generate force during muscle contraction</b> to push out blood. Contractility is one of the main determinants of <a href="#stroke_vol">stroke volume (SV)</a>: <b>As contractility increases, SV increases</b>. If myocytes become more contractile, they are able to generate more force--and therefore pump harder and eject more blood--with each heartbeat.</p>
                 
                 <p> <b>Contractility can be estimated by the left ventricle's (LV) <a href="#ef">ejection fraction (EF)</a></b>, or the percentage of blood in the LV that is pumped out with each heartbeat. <b>If contractility of the LV increases, the EF will increase,</b> because the LV will be able to generate more force to pump out more blood during systole, given a constant starting volume.</p> </p>
                 
                 <h3 align=center>Regulation of Myocyte Contractility</h3>
-                <p> The main way <b>myocytes can increase contracility is by increasing their amount of intracellular Ca2+</b> during <a href="heart_cells.html#myocytes_contract">cardiac muscle contraction</a>. There are two main ways atrial and ventricular myocytes can increase the amount of Ca2+ available for muscle contraction: 1.) increase the Ca2+ influx during the plateau phase of an action potential, and 2.) increase the amount of Ca2+ stored/released from the sarcoplasmic reticulum. Ca2+ movements in myocytes--and therefore contractility--are regulated by the <a href="ans.html">autonomic nervous system</a>. The autonomic nervous system effects on contractility are "<a href="ans_reg_heart.html#inotropic"><b>inotropic effects</b></a>". </p>
+                <p> The main way <b>myocytes can increase contracility is by increasing their amount of intracellular Ca2+</b> during <a href="cardiac_myocytes.html#myocytes_contract">cardiac muscle contraction</a>. There are two main ways atrial and ventricular myocytes can increase the amount of Ca2+ available for muscle contraction: 1.) increase the Ca2+ influx during the plateau phase of an action potential, and 2.) increase the amount of Ca2+ stored/released from the sarcoplasmic reticulum. Ca2+ movements in myocytes--and therefore contractility--are regulated by the <a href="ans.html">autonomic nervous system</a>. The autonomic nervous system effects on contractility are "<a href="ans_reg_heart.html#inotropic"><b>inotropic effects</b></a>". </p>
 
                 <p><b>Contractility is also increased with increased preload.</b> xxx.</p> </TD></TR></TABLE>
         <br>
