--- a/cardio.html
+++ b/cardio.html
@@ -10,11 +10,11 @@
                 <TD WIDTH="514" HEIGHT="309">
                 <center><img src = "images/cardio/cv_main.png" usemap="#cvmain" width="720" height="550">
             <map name="cvmain">
-                <area shape=rect coords="90,165,185,205" href="heart_cells.html#electrical_signal">
-                <area shape=rect coords="95,250,185,290" href="heart_cells.html">
-                <area shape=rect coords="85,325,195,380" href="heart_cells.html#myocytes_contract">
+                <area shape=rect coords="90,165,185,205" href="cardiac_myocytes.html#electrical_signal">
+                <area shape=rect coords="95,250,185,290" href="cardiac_myocytes.html">
+                <area shape=rect coords="85,325,195,380" href="cardiac_myocytes.html#myocytes_contract">
                 <area shape=rect coords="10,190,60,220" href="ekg.html">
-                <area shape=rect coords="220,170,295,210" href="heart_blood_flow.html">
+                <area shape=rect coords="220,170,295,210" href="cardiac_cycle.html">
                 <area shape=rect coords="215,255,300,300" href="cardiac_output.html">
                 <area shape=rect coords="285,395,395,450" href="ans_reg_heart.html">
                 <area shape=rect coords="430,305,500,345" href="preload_afterload.html#preload">
