--- a/cardiac_myocytes.html
+++ b/cardiac_myocytes.html
@@ -17,6 +17,7 @@
                     <area shape=rect coords="245,105,315,150" href="#his_purkinje">
                     <area shape=rect coords="460,15,565,60" href="ans_reg_heart.html">
                     <area shape=rect coords="100,205,210,250" href="#electrical_signal">
+                    <area shape=rect coords="20,248,70,278" href="ekg.html">
                     <area shape=rect coords="230,250,325,305" href="#myocytes_contract">
                     <area shape=rect coords="345,205,435,250" href="#myocytes_contract">
                     <area shape=rect coords="100,300,210,325" href="#automaticity">
