--- a/cardiac_myocytes.html
+++ b/cardiac_myocytes.html
@@ -129,7 +129,7 @@
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
                 <a name="myocytes_contract"><h2 align=center>Atrial and Ventricular Myocytes Perform Muscle Contraction ("Excitation-Contraction Coupling")</h2></a>
-                <p> Unlike SA and AV nodal cells (which are only "conducting cells"), the atrial and ventricular myocytes <i>both</i> a.) <b>receive and pass on electrical signal</b>, <i>and</i> b.) are "contractile cells" and must <b>undergo muscle contraction</b> during each heartbeat.</p>
+                <p> Unlike SA and AV nodal cells (which are only "conducting cells"), the atrial and ventricular myocytes are both "conducting cells" and "contractile cells". In other words, atrial and ventricular myocytes <i>both</i> a.) receive and pass on electrical signal, <i>and</i> b.) actually contract during each heartbeat.</p>
 
                 <p> <b>"Excitation-contraction coupling"</b> is a general term used to describe the fact that cardiac myocytes 1.) receive electrical signal that causes them to depolarize ("<b>excitation</b>"), <i>and</i> this excitation triggers the myocyte to 2.) initiate the process of muscle <b>contraction</b>.</p>
 
