Update ANS links

--- a/ans_reg_heart.html
+++ b/ans_reg_heart.html
@@ -24,7 +24,8 @@
                     <area shape=rect coords="145,320,220,360" href="cardiac_output.html">
 
             	</map><br>
-            	<a href="#ans_heart_summary">Jump to the summary table</a>
+                <a href="ans.html">Click here for an overview of Autonomic Nervous System structure and function</a><br><br>
+            	<a href="#ans_heart_summary">Jump to the "Autonomic Regulation of the Heart" summary table</a>
             </center>
         </TD>
     </TR>
