--- a/preload_afterload.html
+++ b/preload_afterload.html
@@ -16,7 +16,7 @@
 
 
                 <h3 align=center>Preload, Contractility, and Stroke Volume</h3>
-                <p><b>As preload increases, <a href="cardiac_output.html#contractility">contractility</a> increases and, therefore, <a href="cardiac_output.html#stroke_vol">stroke volume (SV)</a> increases.</b> If more blood fills the LV during diastole, the LV will pump harder because it has more blood to eject during systole. Under normal circumstances, the heart will work to maintain its <a href="cardiac_output.html#ef">ejection fraction</a> at 55-75%. If preload increases and a greater volume of blood is present at the start of LV contraction, then, under normal circumstances, the heart will have to pump out a greater volume blood with each heart beat (SV increases). Therefore--in a normal healthy heart--<b>as preload increases, cardiac output will typically increase</b>. </p> 
+                <p><b>As preload increases, <a href="cardiac_output.html#contractility">contractility</a> increases and, therefore, <a href="cardiac_output.html#stroke_vol">stroke volume (SV)</a> increases.</b> If more blood fills the LV during diastole, the LV will pump harder because it has more blood to eject during systole. Under normal circumstances, the heart will work to maintain its <a href="cardiac_output.html#ef">ejection fraction</a> at 55-75%. If preload increases and a greater volume of blood is present at the start of LV contraction, then, under normal circumstances, the heart will have to pump out a greater volume blood with each heart beat (SV increases). Therefore--in a normal healthy heart--<b>as preload increases, <a href="cardiac_output.html">cardiac output</a> will typically increase</b>. </p> 
 
             </TD></TR></TABLE>
 
